force-app/main/default/objects/Provider_Availability__c/Provider_Availability__c.object-meta.xml
<CustomObject>
    <description>Available slots for a provider.</description>
    <label>Provider Availability</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Provider Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Availability</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>