force-app/main/default/objects/Provider_Availability__c/fields/Capacity__c.field-meta.xml
<CustomField>
<fullName>Capacity__c</fullName>
<label>Capacity</label>
<type>Number</type>
<precision>4</precision>
<scale>0</scale>
<defaultValue>0</defaultValue>
</CustomField>