force-app/main/default/objects/Provider_Availability__c/fields/Provider__c.field-meta.xml
<CustomField>
<fullName>Provider__c</fullName>
<label>Provider</label>
<type>Lookup</type>
<required>true</required>
<referenceTo>Provider__c</referenceTo>
<deleteConstraint>Restrict</deleteConstraint>
<relationshipLabel>Provider Records</relationshipLabel>
<relationshipName>ProviderAvailabilityProvider</relationshipName>
</CustomField>