force-app/main/default/objects/Provider_Availability__c/fields/Slots__c.field-meta.xml
<CustomField>
    <fullName>Slots__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Slots</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>