force-app/main/default/objects/Provider_Availability__c/fields/Start_Time__c.field-meta.xml
<CustomField>
<fullName>Start_Time__c</fullName>
<label>Start Time</label>
<type>Time</type>
<required>true</required>
</CustomField>